--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@ h1{
 }
 textarea{
     background-color: white;
-    margin:5px;
-    border: 2px solid;
+    margin:2rem;
+    border: 0.5rem solid;
     border-color: red;
     display:block;
     height:10vh;
     width:80%;
     margin:auto;
-    margin-top:10px;
+    margin-top:2rem;
 
 }
 .nav-logo{
@@ -36,7 +36,7 @@ textarea{
     border-radius: 50%;
     
     
-    margin:2px;
+    margin:1rem;
     
 }
 .nav-brand{
@@ -52,8 +52,9 @@ justify-content:center;
 button{
     font-size:larger;
     background-color: red;
-    Color: whitesmoke;
-    margin-left:70px;
-    margin-top: 10px;
+    Color: whitesmoke;    
+    margin:auto;
+    display:block;
+    margin-top: 2rem;
     
 }
